FIX:新規キット作成画面のレスポンシブ対応（iPhoneSE）

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,3 +25,5 @@
 @import "score_calendar";
 @import "onboarding";
 @import "community";
+@import "media_iphone_toppage";
+@import "media_iphone_word_kit";
