FIX:コミュニティー画面のレスポンシブ対応（iPhoneSE）

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,3 +28,4 @@
 @import "media_iphone_toppage";
 @import "media_iphone_word_kit";
 @import "media_iphone_game_room";
+@import "media_iphone_community";
