--- a/app/views/self_studies/play.html.erb
+++ b/app/views/self_studies/play.html.erb
@@ -41,10 +41,11 @@
     </div>
 
     <div class="exit-section">
-      <%= button_to "学習を終了する", word_kit_self_study_path(@word_kit), 
-          method: :patch, 
-          id: "finish-button", 
-          class: "btn-finish" %>
+      <button type="button" 
+          id="finish-button" 
+          class="btn-finish" 
+          data-action="click->self-study#finishGame"> 学習を終了する
+      </button>
     </div>
   </div>
 </div>
