FIX:Letter_openerからURLで飛んで、リセットできるか検証

--- a/app/views/user_mailer/reset_password_email.html.erb
+++ b/app/views/user_mailer/reset_password_email.html.erb
@@ -1,7 +1,8 @@
 <p><%= @user.name %>さん</p>
 
-<p>パスワートリセット用のリンクはこちらです。</p>
-
+<p>いつも Vocano! をご利用いただきありがとうございます。</p>
+<p>パスワード再設定のご依頼を受け付けました。</p>
+<p>以下のURLから新しいパスワードを設定してください。</p>
 <p><a href="<%= @url %>">ここをクリック！</a></p>
 
-<p>今後をVocano!をお楽しみください</p>
+<p>これからもVocano!をよろしくお願いいたします。</p>
