--- a/app/views/user_mailer/reset_password_email.text.erb
+++ b/app/views/user_mailer/reset_password_email.text.erb
@@ -1,8 +1,9 @@
 <%= @user.name %>さん
 
-パスワートリセット用のリンクはこちらです。
+いつも Vocano! をご利用いただきありがとうございます。
+パスワード再設定のご依頼を受け付けました。
+以下のURLから新しいパスワードを設定してください。
 
 <%= @url %>
 
-
-今後をVocano!をお楽しみください！
+これからもVocano!をよろしくお願いいたします。
