--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -14,9 +14,13 @@
 
       <div>
         <% if kit.tags.any? %>
-          <div class="tag-list-row">
-            <% kit.tags.each do |tag| %>
+          <div class="tag-list-row is_list">
+            <% kit.tags.first(6).each do |tag| %>
               <span class="tag-badge-v2"><%= tag.name %></span>
+            <% end %>
+
+            <% if kit.tags.count > 6 %>
+              <span class="tag-dots">...</span>
             <% end %>
           </div>
         <% end %>
