--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -1,5 +1,6 @@
-<h1 class="community-title">公開キット</h1>
-
+<div class="title-container">
+  <h1 class="community-title">公開キット</h1>
+</div>
 <%= render 'word_kits/search_form', url: url_for %>
 
 <div class="community-container">
