FIX:ゲームキット詳細画面のSCSSをリファクタリング

--- a/app/views/word_kits/show.html.erb
+++ b/app/views/word_kits/show.html.erb
@@ -1,6 +1,7 @@
 <% content_for :title, "ゲームキット詳細 | Vocano!" %>
 
 <div class="edit-page-container">
+  <h1 class="word-kit-index">ゲームキット詳細</h1>
   <div class="edit-card-body">
     <h1 class="word-kit-index detail-title">
       <%= @word_kit.name %>
